implementing unit test